# assignment-1-Tsvetomira-dot-main

./: .gitignore  ClassDiagram.puml  pyproject.toml
src/streaming/: albums.py  artists.py  platform.py  playlists.py  sessions.py  tracks.py  users.py
tests/: conftest.py  test_public.py
tests/unit_tests/: conftest.py  test_albums.py  test_artists.py  test_playlists.py  test_sessions.py  test_tracks.py  test_users.py
